syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/BelyaevEI/microservices_server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateRequest) returns (CreateResponse);
  rpc DeleteChat(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message CreateRequest {
  repeated string usernames = 1;
  repeated int64 id = 2;
  string chatname = 3;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  int64 from_user_id = 1;
  int64 to_chat_id = 2;
  string text = 3;
}

message SendMessageResponse {
  string id = 1;
  int64 chat_id = 2;
}